fix: pre tag overflow

--- a/frontend/src/app/page.module.sass
+++ b/frontend/src/app/page.module.sass
@@ -127,6 +127,8 @@
     display: flex
     flex-direction: column
     padding: 0 var(--space-sides-stories)
+    pre
+      white-space: pre-wrap
     h1, h2, h3, h4, h5, h6
       @include font-title
       font-weight: 400
